[gd_scene load_steps=24 format=2]

[ext_resource path="res://overworld/Overworld.gd" type="Script" id=1]
[ext_resource path="res://assets/map_tileset.tres" type="TileSet" id=2]
[ext_resource path="res://assets/Music/overworld_loop.tres" type="AudioStream" id=3]
[ext_resource path="res://overworld/Anchor.gd" type="Script" id=4]
[ext_resource path="res://assets/Label_O2.png" type="Texture" id=5]
[ext_resource path="res://overworld/Player.gd" type="Script" id=6]
[ext_resource path="res://overworld/TileMap.gd" type="Script" id=7]
[ext_resource path="res://assets/Tony_Created_Assets/astro_walking_overland.png" type="Texture" id=8]
[ext_resource path="res://assets/O2_bar_empty.png" type="Texture" id=9]
[ext_resource path="res://assets/O2_bar_fill.png" type="Texture" id=10]
[ext_resource path="res://assets/Label_CO2.png" type="Texture" id=11]
[ext_resource path="res://assets/Label_H2O.png" type="Texture" id=12]
[ext_resource path="res://assets/Label_Battery.png" type="Texture" id=13]
[ext_resource path="res://assets/Tony_Created_Assets/moon_stone.png" type="Texture" id=14]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0.00392157, 0.14902, 0.592157, 0.588235 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="InputEventKey" id=3]
scancode = 32

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 16, 16 )

[sub_resource type="Animation" id=6]
length = 0.16
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.01, 0.02, 0.03, 0.04, 0.05, 0.06, 0.07, 0.08, 0.09, 0.1, 0.11, 0.12, 0.13, 0.14, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=7]
length = 0.16
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.01, 0.02, 0.03, 0.04, 0.05, 0.06, 0.07, 0.08, 0.09, 0.1, 0.11, 0.12, 0.13, 0.14, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31 ]
}

[sub_resource type="Animation" id=8]
length = 0.16
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.01, 0.02, 0.03, 0.04, 0.05, 0.06, 0.07, 0.08, 0.09, 0.1, 0.11, 0.12, 0.13, 0.14, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47 ]
}

[sub_resource type="Animation" id=9]
length = 0.16
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.01, 0.02, 0.03, 0.04, 0.05, 0.06, 0.07, 0.08, 0.09, 0.1, 0.11, 0.12, 0.13, 0.14, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63 ]
}

[node name="Overworld" type="Node2D"]
script = ExtResource( 1 )

[node name="GUI" type="CanvasLayer" parent="."]

[node name="HUD" type="MarginContainer" parent="GUI"]
anchor_right = 1.0
margin_bottom = 88.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/HUD"]
margin_left = 10.0
margin_top = 10.0
margin_right = 630.0
margin_bottom = 78.0

[node name="BarsLeft" type="VBoxContainer" parent="GUI/HUD/HBoxContainer"]
margin_right = 170.0
margin_bottom = 68.0

[node name="OxygenBar" type="HBoxContainer" parent="GUI/HUD/HBoxContainer/BarsLeft"]
margin_right = 170.0
margin_bottom = 32.0

[node name="Oxygen" type="MarginContainer" parent="GUI/HUD/HBoxContainer/BarsLeft/OxygenBar"]
margin_right = 170.0
margin_bottom = 32.0

[node name="Background" type="NinePatchRect" parent="GUI/HUD/HBoxContainer/BarsLeft/OxygenBar/Oxygen"]
margin_right = 170.0
margin_bottom = 32.0
rect_min_size = Vector2( 170, 32 )
texture = SubResource( 2 )

[node name="Title" type="TextureRect" parent="GUI/HUD/HBoxContainer/BarsLeft/OxygenBar/Oxygen/Background"]
margin_right = 50.0
margin_bottom = 32.0
texture = ExtResource( 5 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Number" type="Label" parent="GUI/HUD/HBoxContainer/BarsLeft/OxygenBar/Oxygen/Background"]
margin_left = 42.883
margin_right = 67.883
margin_bottom = 32.0
text = "100"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gauge" type="TextureProgress" parent="GUI/HUD/HBoxContainer/BarsLeft/OxygenBar/Oxygen/Background"]
margin_left = 70.0
margin_right = 166.0
margin_bottom = 32.0
value = 50.0
texture_under = ExtResource( 9 )
texture_progress = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CarbonBar" type="HBoxContainer" parent="GUI/HUD/HBoxContainer/BarsLeft"]
visible = false
margin_top = 36.0
margin_right = 170.0
margin_bottom = 68.0

[node name="Carbon" type="MarginContainer" parent="GUI/HUD/HBoxContainer/BarsLeft/CarbonBar"]
margin_right = 170.0
margin_bottom = 32.0

[node name="Background" type="NinePatchRect" parent="GUI/HUD/HBoxContainer/BarsLeft/CarbonBar/Carbon"]
margin_right = 170.0
margin_bottom = 32.0
rect_min_size = Vector2( 170, 32 )
texture = SubResource( 2 )

[node name="Title" type="TextureRect" parent="GUI/HUD/HBoxContainer/BarsLeft/CarbonBar/Carbon/Background"]
margin_right = 50.0
margin_bottom = 32.0
texture = ExtResource( 11 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Number" type="Label" parent="GUI/HUD/HBoxContainer/BarsLeft/CarbonBar/Carbon/Background"]
margin_left = 50.0
margin_right = 75.0
margin_bottom = 32.0
text = "50"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gauge" type="TextureProgress" parent="GUI/HUD/HBoxContainer/BarsLeft/CarbonBar/Carbon/Background"]
margin_left = 70.0
margin_right = 166.0
margin_bottom = 32.0
value = 50.0
texture_under = ExtResource( 9 )
texture_progress = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Currencys" type="VBoxContainer" parent="GUI/HUD/HBoxContainer"]
margin_left = 174.0
margin_right = 446.0
margin_bottom = 68.0
size_flags_horizontal = 3

[node name="PlayerInfoBar" type="VBoxContainer" parent="GUI/HUD/HBoxContainer/Currencys"]
margin_right = 272.0
margin_bottom = 32.0

[node name="PlayerInfo" type="MarginContainer" parent="GUI/HUD/HBoxContainer/Currencys/PlayerInfoBar"]
margin_right = 272.0
margin_bottom = 32.0

[node name="Background" type="NinePatchRect" parent="GUI/HUD/HBoxContainer/Currencys/PlayerInfoBar/PlayerInfo"]
margin_right = 272.0
margin_bottom = 32.0
rect_min_size = Vector2( 170, 32 )
texture = SubResource( 2 )

[node name="Level" type="Label" parent="GUI/HUD/HBoxContainer/Currencys/PlayerInfoBar/PlayerInfo/Background"]
margin_top = 2.0
margin_right = 60.0
margin_bottom = 33.0
text = "Level: 10"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="Label" parent="GUI/HUD/HBoxContainer/Currencys/PlayerInfoBar/PlayerInfo/Background"]
margin_left = 75.0
margin_top = 1.0
margin_right = 163.0
margin_bottom = 32.0
text = "Health: 2000"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Combats" type="Label" parent="GUI/HUD/HBoxContainer/Currencys/PlayerInfoBar/PlayerInfo/Background"]
margin_left = 175.0
margin_top = 1.0
margin_right = 263.0
margin_bottom = 32.0
text = "Combats: 400"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BarsRight" type="VBoxContainer" parent="GUI/HUD/HBoxContainer"]
margin_left = 450.0
margin_right = 620.0
margin_bottom = 68.0

[node name="CurrencyBar" type="HBoxContainer" parent="GUI/HUD/HBoxContainer/BarsRight"]
margin_right = 170.0
margin_bottom = 32.0

[node name="Currency" type="MarginContainer" parent="GUI/HUD/HBoxContainer/BarsRight/CurrencyBar"]
margin_right = 170.0
margin_bottom = 32.0

[node name="Background" type="NinePatchRect" parent="GUI/HUD/HBoxContainer/BarsRight/CurrencyBar/Currency"]
margin_right = 170.0
margin_bottom = 32.0
rect_min_size = Vector2( 170, 32 )
texture = SubResource( 2 )

[node name="Title" type="TextureRect" parent="GUI/HUD/HBoxContainer/BarsRight/CurrencyBar/Currency/Background"]
margin_right = 50.0
margin_bottom = 32.0
texture = ExtResource( 14 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Number" type="Label" parent="GUI/HUD/HBoxContainer/BarsRight/CurrencyBar/Currency/Background"]
margin_left = 50.0
margin_right = 75.0
margin_bottom = 32.0
text = "10000"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PowerBar" type="HBoxContainer" parent="GUI/HUD/HBoxContainer/BarsRight"]
visible = false
margin_top = 36.0
margin_right = 170.0
margin_bottom = 68.0

[node name="Power" type="MarginContainer" parent="GUI/HUD/HBoxContainer/BarsRight/PowerBar"]
margin_right = 170.0
margin_bottom = 32.0

[node name="Background" type="NinePatchRect" parent="GUI/HUD/HBoxContainer/BarsRight/PowerBar/Power"]
margin_right = 170.0
margin_bottom = 32.0
rect_min_size = Vector2( 170, 32 )
texture = SubResource( 2 )

[node name="Title" type="TextureRect" parent="GUI/HUD/HBoxContainer/BarsRight/PowerBar/Power/Background"]
margin_right = 50.0
margin_bottom = 32.0
texture = ExtResource( 13 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Number" type="Label" parent="GUI/HUD/HBoxContainer/BarsRight/PowerBar/Power/Background"]
margin_left = 50.0
margin_right = 75.0
margin_bottom = 32.0
text = "50"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gauge" type="TextureProgress" parent="GUI/HUD/HBoxContainer/BarsRight/PowerBar/Power/Background"]
margin_left = 70.0
margin_right = 166.0
margin_bottom = 32.0
value = 50.0
texture_under = ExtResource( 9 )
texture_progress = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaterBar" type="HBoxContainer" parent="GUI/HUD/HBoxContainer/BarsRight"]
visible = false
margin_top = 36.0
margin_right = 170.0
margin_bottom = 68.0

[node name="Water" type="MarginContainer" parent="GUI/HUD/HBoxContainer/BarsRight/WaterBar"]
margin_right = 170.0
margin_bottom = 32.0

[node name="Background" type="NinePatchRect" parent="GUI/HUD/HBoxContainer/BarsRight/WaterBar/Water"]
margin_right = 170.0
margin_bottom = 32.0
rect_min_size = Vector2( 170, 32 )
texture = SubResource( 2 )

[node name="Title" type="TextureRect" parent="GUI/HUD/HBoxContainer/BarsRight/WaterBar/Water/Background"]
margin_right = 50.0
margin_bottom = 32.0
texture = ExtResource( 12 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Number" type="Label" parent="GUI/HUD/HBoxContainer/BarsRight/WaterBar/Water/Background"]
margin_left = 50.0
margin_right = 75.0
margin_bottom = 32.0
text = "50"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gauge" type="TextureProgress" parent="GUI/HUD/HBoxContainer/BarsRight/WaterBar/Water/Background"]
margin_left = 70.0
margin_right = 166.0
margin_bottom = 32.0
value = 50.0
texture_under = ExtResource( 9 )
texture_progress = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="GUI"]
visible = false
margin_top = 80.0
margin_right = 640.0
margin_bottom = 120.0
color = Color( 0, 0, 0, 0.564706 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Debug" type="Control" parent="GUI"]
visible = false
margin_right = 640.0
margin_bottom = 360.0

[node name="Level" type="Label" parent="GUI/Debug"]
margin_top = 80.0
margin_right = 64.0
margin_bottom = 120.0
text = "Level:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HP" type="Label" parent="GUI/Debug"]
margin_left = 88.0
margin_top = 80.0
margin_right = 136.0
margin_bottom = 120.0
text = "HP:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Counter" type="Label" parent="GUI/Debug"]
margin_left = 152.0
margin_top = 80.0
margin_right = 240.0
margin_bottom = 120.0
text = "Counter: "
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TilePos" type="Label" parent="GUI/Debug"]
margin_left = 320.0
margin_top = 80.0
margin_right = 352.0
margin_bottom = 120.0
text = "(0,0)"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MousePos" type="Label" parent="GUI/Debug"]
margin_left = 264.0
margin_top = 80.0
margin_right = 304.0
margin_bottom = 120.0
text = "(0,0)"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StepCount" type="Label" parent="GUI/Debug"]
margin_left = 520.0
margin_top = 88.0
margin_right = 640.0
margin_bottom = 112.0
text = "Steps: 398"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StepToFight" type="Label" parent="GUI/Debug"]
margin_left = 400.0
margin_top = 88.0
margin_right = 513.0
margin_bottom = 112.0
text = "StepsToFight: 398"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Win" type="ColorRect" parent="GUI"]
visible = false
margin_right = 640.0
margin_bottom = 328.0
color = Color( 0, 0, 0, 0.694118 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GUI/Win"]
margin_left = 69.566
margin_top = 40.0
margin_right = 555.566
margin_bottom = 88.0
text = "You've done excellent! Spend your currency at SAAN to go further next time.
You Win!"
align = 1
valign = 1

[node name="Restart" type="Button" parent="GUI/Win"]
margin_left = 216.0
margin_top = 104.0
margin_right = 432.0
margin_bottom = 168.0
text = "Go To SAAN"

[node name="Lose" type="ColorRect" parent="GUI"]
visible = false
margin_right = 640.0
margin_bottom = 328.0
color = Color( 0, 0, 0, 0.694118 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GUI/Lose"]
margin_left = 36.0
margin_top = 41.0
margin_right = 607.0
margin_bottom = 100.0
text = "You have made poor choices and it lead to your demise. Spend what currency you managed to find at SAAN.
You Lose!"
align = 1
valign = 1
autowrap = true

[node name="LoseRestart" type="Button" parent="GUI/Lose"]
margin_left = 216.0
margin_top = 104.0
margin_right = 432.0
margin_bottom = 168.0
text = "Go To SAAN"

[node name="Loot" type="ColorRect" parent="GUI"]
visible = false
margin_left = 184.0
margin_top = 48.0
margin_right = 441.0
margin_bottom = 363.0
color = Color( 0, 0, 0, 0.694118 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LootText" type="Label" parent="GUI/Loot"]
margin_left = 26.0
margin_top = 20.0
margin_right = 240.0
margin_bottom = 60.0
text = "After fighting with the lock mechanism you pry open the chest and find:"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LootAccept" type="Button" parent="GUI/Loot"]
margin_left = 58.0
margin_top = 255.0
margin_right = 194.0
margin_bottom = 290.0
shortcut = SubResource( 4 )
text = "Take All"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LootList" type="ItemList" parent="GUI/Loot"]
margin_left = 22.0
margin_top = 71.0
margin_right = 239.0
margin_bottom = 247.0

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
script = ExtResource( 7 )

[node name="PlayerRoot" type="Node2D" parent="."]

[node name="Player" type="Area2D" parent="PlayerRoot"]
position = Vector2( 314.684, 192.783 )
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="PlayerRoot/Player"]
texture = ExtResource( 8 )
centered = false
vframes = 4
hframes = 16
frame = 63

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerRoot/Player"]
position = Vector2( 16, 16 )
shape = SubResource( 5 )

[node name="MoveTween" type="Tween" parent="PlayerRoot/Player"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="PlayerRoot/Player"]
anims/down = SubResource( 6 )
anims/left = SubResource( 7 )
anims/right = SubResource( 8 )
anims/up = SubResource( 9 )

[node name="RayCastLeft" type="RayCast2D" parent="PlayerRoot/Player"]
position = Vector2( 16, 16 )
enabled = true
cast_to = Vector2( -32, 0 )

[node name="RayCastRight" type="RayCast2D" parent="PlayerRoot/Player"]
position = Vector2( 16, 16 )
enabled = true
cast_to = Vector2( 32, 0 )

[node name="RayCastUp" type="RayCast2D" parent="PlayerRoot/Player"]
position = Vector2( 16, 16 )
enabled = true
cast_to = Vector2( 0, -32 )

[node name="RayCastDown" type="RayCast2D" parent="PlayerRoot/Player"]
position = Vector2( 16, 16 )
enabled = true
cast_to = Vector2( 0, 32 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="PlayerRoot/Player"]
position = Vector2( 16, 16 )
stream = ExtResource( 3 )
volume_db = -10.097
autoplay = true

[node name="Anchor" type="Position2D" parent="PlayerRoot"]
position = Vector2( 16, 16 )
script = ExtResource( 4 )

[node name="Cam" type="Camera2D" parent="PlayerRoot/Anchor"]
current = true
zoom = Vector2( 0.75, 0.75 )
drag_margin_h_enabled = true
drag_margin_v_enabled = true
[connection signal="pressed" from="GUI/Win/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="GUI/Lose/LoseRestart" to="." method="_on_LoseRestart_pressed"]
[connection signal="pressed" from="GUI/Loot/LootAccept" to="." method="_on_LootAccept_pressed"]
[connection signal="collided" from="PlayerRoot/Player" to="TileMap" method="_on_Player_collided"]
[connection signal="tween_completed" from="PlayerRoot/Player/MoveTween" to="PlayerRoot/Player" method="_on_MoveTween_tween_completed"]
